--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Marioclub</h1>
 </header>
 <section class="banner"> 
-    <img src="img/banner.png" alt="mario club welcome banner">
+    <img src="banner.png" alt="mario club welcome banner">
     <div class="welcome">
         <h2>Welcome to <br><span>Mario Club</span></h2>
     </div>
@@ -38,8 +38,8 @@
         soluta ipsam iusto? Porro, excepturi.deserunt modi, perspiciatis,Magnam sequi quasi deserunt modi, perspiciatis</p>
     </article>    
     <ul class="images">
-        <li><img src="img/thumb-1.png" alt="Mario thumb-1"></li>
-        <li><img src="img/thumb-2.png" alt="Mario thumb-2"></li>
+        <li><img src="ithumb-1.png" alt="Mario thumb-1"></li>
+        <li><img src="thumb-2.png" alt="Mario thumb-2"></li>
     </ul>
 </main>
 
