--- a/index.html
+++ b/index.html
@@ -1,63 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temur's first WebSite</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet">
+    <script defer src="script.js"></script>
+    <title>Clock</title>
 </head>
 <body>
+
+    <div class="clock">
+        <div class="hand hour" data-hour-hand></div>
+        <div class="hand minute" data-minute-hand ></div>
+        <div class="hand second" data-second-hand></div>
+        <div class="number number1">I</div>
+        <div class="number number2">II</div>
+        <div class="number number3">III</div>
+        <div class="number number4">IV</div>
+        <div class="number number5">V</div>
+        <div class="number number6">VI</div>
+        <div class="number number7">VII</div>
+        <div class="number number8">VIII</div>
+        <div class="number number9">IX</div>
+        <div class="number number10">X</div>
+        <div class="number number11">XI</div>
+        <div class="number number12">XII</div>
+    </div>    
     
-<header>
-    <h1>Marioclub</h1>
-</header>
-<section class="banner"> 
-    <img src="banner.png" alt="mario club welcome banner">
-    <div class="welcome">
-        <h2>Welcome to <br><span>Mario Club</span></h2>
-    </div>
-</section>
-<nav class="main-nav"> 
-    <ul>
-        <li><a href="/join.html" class="join">Join the club</a></li>
-        <li><a href="/news.html">Latest news</a></li>
-        <li><a href="/games.html">New Games</a></li>
-        <li><a href=".contact.html">Contact</a></li>
-    </ul>
-</nav>
-<main>
-    <article>
-        <h2>It's a me, Mario</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sequi quasi deserunt modi, perspiciatis,
-        dolorum minus consequuntur ad aliquid voluptates porro quam exercitationem, consequatur animi
-        soluta ipsam iusto? Porro, excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sequi quasi
-        dolorum minus consequuntur ad aliquid voluptates porro quam exercitationem, consequatur animi
-        soluta ipsam iusto? Porro, excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        dolorum minus consequuntur ad aliquid voluptates porro quam exercitationem, consequatur animi
-        soluta ipsam iusto? Porro, excepturi.deserunt modi, perspiciatis,Magnam sequi quasi deserunt modi, perspiciatis</p>
-    </article>    
-    <ul class="images">
-        <li><img src="thumb-1.png" alt="Mario thumb-1"></li>
-        <li><img src="thumb-2.png" alt="Mario thumb-2"></li>
-    </ul>
-</main>
-
-<section class="join">
-    <h2>Join Today!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum veniam commodi
-         iusto ullam aut voluptates doloremque. Dolores delectus cumque, sapiente mollitia
-          porro corporis architecto hic reiciendis facilis nisi repellendus eius?</p>
-          <form>
-              <input type="email" name="email" placeholder="Type email & hit enter" required>
-
-          </form>
-</section>
-<footer>
-    <p class="copyright">Copyright 2019 Mario club</p>
-
-
-</footer>
-
 </body>
 </html>
